package ch.etmles.payroll.Employee;import org.springframework.web.bind.annotation.*;import java.util.List;@RestControllerpublic class EmployeeController {    private final EmployeeRepository repository;    EmployeeController(EmployeeRepository repository){        this.repository = repository;    }    /* curl sample :    curl -i localhost:8080/employees    */    @GetMapping("/employees")    List<EmployeeEntity> all(){        return repository.findAll();    }    /* curl sample :    curl -i -X POST localhost:8080/employees ^        -H "Content-type:application/json" ^        -d "{\"name\": \"Russel George\", \"role\": \"gardener\", \"email\": \"rus@test\"}"    */    @PostMapping("/employees")    EmployeeEntity newEmployee(@RequestBody EmployeeEntity newEmployee){        return repository.save(newEmployee);    }    /* curl sample :    curl -i localhost:8080/employees/1    */    @GetMapping("/employees/{id}")    EmployeeEntity one(@PathVariable Long id){        return repository.findById(id)                .orElseThrow(() -> new EmployeeNotFoundException(id));    }    /* curl sample :    curl -i -X PUT localhost:8080/employees/2 ^        -H "Content-type:application/json" ^        -d "{\"name\": \"Samwise Bing\", \"role\": \"peer-to-peer\", \"email\": \"sam@test\"}"     */    @PutMapping("/employees/{id}")    EmployeeEntity replaceEmployee(@RequestBody EmployeeEntity newEmployee, @PathVariable Long id) {        return repository.findById(id)                .map(employee -> {                    employee.setName(newEmployee.getName());                    employee.setRole(newEmployee.getRole());                    employee.setEmail(newEmployee.getEmail());                    return repository.save(employee);                })                .orElseGet(() -> {                    newEmployee.setId(id);                    return repository.save(newEmployee);                });    }    /* curl sample :    curl -i -X DELETE localhost:8080/employees/2    */    @DeleteMapping("/employees/{id}")    void deleteEmployee(@PathVariable Long id){        if(!repository.existsById(id)){            throw new EmployeeNotFoundDeleted(id);        }else{            repository.deleteById(id);        }    }}