@startuml
'https://plantuml.com/class-diagram


package "Data Layer" {
    JpaRepository <|--  EmployeeRepository
    EmployeeRepository <-- EmployeeEntity

    interface EmployeeRepository{
    }
    interface JpaRepository{

    }
    class EmployeeEntity{
        -privateName : string
        -privateRole : string
        -privateEmail : string
        -privateId : Long id

        +EmployeeEntity(name:string, role:string, email:string)
        +<get,set>name() : string
        +<get,set>role() : string
        +<get,set>email() : string
        +<get,set>id() : Long
        +publicEquals(o : Object) : boolean
        +publicHashCode() : int
        +publicToString() : string
    }
}
package "Controller Layer"{
    EmployeeRepository <-- EmployeeController
    class EmployeeController{
        -privateRepository : EmployeeRepository;
        +EmployeeController(repository : EmployeeRepository)
        +publicAll() : List<Employee>
        +publicNewEmployee(newEmployee : Employee) : Employee
        +publicOne(id : Long) : Employee
        +publicReplaceEmployee(newEmployee : Employee, id : Long) : Employee
    }
}

@enduml

@startuml
'https://plantuml.com/class-diagram

package ch{
    package etmles{
        package payroll{
            package "Controllers"{
                class EmployeeController {
                    -EmployeeRepository repository

                    +EmployeeController(EmployeeRepository repository)
                    +List<Employee> all()
                    +Employee newEmployee(@ResquestBody Employee newEmployee)
                    +Employee one(@PathVariable Long id)
                }


                class EmployeeNotFoundAdvice {
                    String employeeNotFoundHandler
                }

                exception EmployeeNotFoundException {
                    EmployeeNotFoundException(Long id)
                }
            }

            interface EmployeeRepository <extends : JpaRepository<Employee, Long>> {

            }



            package Entities{
                class Employee{
                    -@Id
                    -@GeneratedValue Long id
                    -String name
                    -String role

                    +Employee()
                    +Employee(Sttring name, String role)
                    +Long getID()
                    +void setID(Long id)
                    +String String getName()
                    +void setName(String name)
                    +String getRole()
                    +void setRole(String role)
                    +bolean equals(Object o)
                    +int hashCode()
                    +String toString()
                }
            }

            package Repositories{
                class PayrollApplication{}

            EmployeeController <-- EmployeeRepository
            Employee --> EmployeeController
            EmployeeNotFoundException <-- EmployeeController
            EmployeeNotFoundException --> EmployeeNotFoundAdvice
        }
    }
}
@enduml